<resources>
    <string name="app_name">LpuCampusGuide</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">Login</string>
    <string name="btn_forgot_password">Forget Password</string>
    <string name="auth_failed">authentication failed</string>
    <string name="minimum_password">password must be of length six</string>
    <string name="btn_link_to_login">login_link</string>
    <string name="action_sign_in_short">sign in</string>
    <string name="hint_bloodGroup">Registration Number</string>
    <string name="hint_name">Name</string>
    <string name="btn_reset_password">reset password</string>
    <string name="btn_back">back</string>
    <string name="lbl_forgot_password">forget_password</string>
    <string name="forgot_password_msg">forgot password message</string>
    <string name="title_activity_byod_course">Byod_course</string>

    <string-array name="array_facts">
        <item>OPDs(Out Patient Department)</item>
        <item>OPD charges</item>
        <item>Amnulance</item>
        <item>Emergency</item>
        <item>Patient Addmission</item>
        <item>Timing of Chamist Shop</item>

    </string-array>


</resources>
